# claudium

./: .gitignore  CLAUDE.md  LICENSE  README.md  claudium.toml  pyproject.toml
.agents/roles/: analyst.md
.agents/skills/: triage.md
.claude/commands/: git-sync.md
.github/workflows/: ci.yml
agents/: default.py
claudium/: __init__.py  audit.py  build.py  cli.py  config.py  core.py  mcp.py  mcp_server.py  orchestrator.py  server.py  skills.py  types.py
claudium/harness/: __init__.py  anthropic.py  base.py  replay.py
claudium/sandbox/: __init__.py  base.py  virtual.py
claudium/teams/: __init__.py  domain.py  session.py  specialist.py
docs/: calibration.md  hitl.md
extras/: claudium.md
tests/: conftest.py  test_audit.py  test_audit_property.py  test_audit_snapshot.py  test_boundaries.py  test_budget.py  test_budget_workflow_audit.py  test_budget_workflow_parallel.py  test_budget_workflow_sequential.py  test_build.py  test_cli.py  test_config.py  test_core.py  test_core_extended.py  test_hitl.py  test_mcp_server.py  test_model_pinning.py  test_observability.py  test_orchestrator.py  test_sandbox.py  test_sandbox_extended.py  test_self_improvement.py  test_server.py  test_skills.py  test_skills_extended.py  test_tasks.py  test_teams_v3a.py  test_teams_v3b.py  test_user_attribution.py
tests/snapshots/: audit_call_log.json  audit_report.csv  audit_team_run.json
